доработана возможность продавца менять статус заказа

--- a/GadgetZone/src/main/resources/templates/manage-orders.html
+++ b/GadgetZone/src/main/resources/templates/manage-orders.html
@@ -24,7 +24,7 @@
   <tbody>
   <tr th:each="order : ${orders}">
     <td th:text="${order.id}"></td>
-    <td th:text="${#dates.format(order.orderDate, 'dd.MM.yyyy HH:mm')}"></td>
+    <td th:text="${order.orderDateAsDate != null} ? ${#dates.format(order.orderDateAsDate, 'dd/MM/yyyy HH:mm')} : 'Нет даты'"></td>
     <td th:text="${order.status}"></td>
     <td th:text="${order.totalAmount} + ' ₽'"></td>
     <td>
